# templeUniversity

./: .gitignore  .gitmodules  README.md
CIS2107/: CMakeLists.txt
CIS2107/assignment1/: ArrayPractice.c  a.out
CIS2107/assignment2/: CMakeLists.txt  jacky_proj.c
CIS2107/assignment4/: CMakeLists.txt  main.c
CIS2107/assignment6/: CMakeLists.txt  dedup.c  diff.c  ends_with_ignore_case.c  find.c  len_diff.c  main.c  num_in_range.c  ptr_to.c  repeat.c  replace.c  rm_space.c  shorten.c  str_connect.c  str_len.c  strcmp_ign_case.c
CIS2168/CIS2168-master/: README.md
CIS2168/sorting/: sorting1.csv
CIS4360_microservices/final/: onePager.docx  onePagerEdit.docx  ~$finalSnap-Gan.pptx
CIS4360_microservices/gartner/: blog.md
CIS4360_microservices/hw2/: hw2.docx
CIS4360_microservices/lab1/: README.md  lab1.md
CIS4360_microservices/lab2/: Lab2Presentation.pptx
CIS4360_microservices/lab4/: lab4.docx
CIS4360_microservices/writtenHW/: DDDwritten.docx  Homework-1.docx
CIS5511/: .gitignore
CIS5511/algo/: algo.ipynb  algo.py  report.txt
CIS5511/graph/: LCS presentation.pptx  matrix.py
CIS5526/: Pipfile  README.md
CIS5526/homework2/: KNN.ipynb  testKNN.ipynb  (+3 more)
MATH3043/: README.md  TAlab6.m  lab3TA.mlx  labworkforlab3_JackieGan.m  labworkforlab4_JackieGan.m  labworkforlab5_JackieGan.m  labworkforlab6_jackiegan.m  labworkforlab7_Jackiegan.m
MATH3044/: homework10_1_2_4.m  homework11_3.m  homework11_4.m  homework12_1.m  homework12_2.m  homework12_2Q2.m  homework12_2Q5.m  homework12_3.m  homework12_4.m  homework5_2.m  homework5_4.m  homework5_6.m  homework5_9.m
(+71 files in other folders)
